Release 0.0.5 (#22)
* feat(): Rename virtual user on room name change (#21)

* Refactor UserService to have renameUser method.

* Update tests to enforce error log messages

* Rename virtual user on room name change