@@ -3,6 +3,7 @@ package ca.levimiller.smsbridge.rest.impl;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -10,12 +11,17 @@ import static org.mockito.Mockito.when;
 import ca.levimiller.smsbridge.data.db.TransactionRepository;
 import ca.levimiller.smsbridge.data.model.Transaction;
 import ca.levimiller.smsbridge.service.MatrixEventService;
+import ca.levimiller.smsbridge.util.MockLogger;
+import ch.qos.logback.classic.Level;
 import io.github.ma1uta.matrix.EmptyResponse;
 import io.github.ma1uta.matrix.application.model.TransactionRequest;
+import io.github.ma1uta.matrix.event.Event;
 import io.github.ma1uta.matrix.event.RoomAliases;
 import io.github.ma1uta.matrix.event.RoomMessage;
-import java.util.Arrays;
+import io.github.ma1uta.matrix.event.content.EventContent;
+import java.util.List;
 import java.util.Optional;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -24,16 +30,19 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 
 @SpringBootTest
 class MatrixApiTest {
+  private final MatrixApi matrixApi;
+
   @MockBean
   private TransactionRepository transactionRepository;
   @MockBean
-  private MatrixEventService eventService;
-
-  private final MatrixApi matrixApi;
+  private MatrixEventService<Event<EventContent>>  eventService;
+  private MockLogger mockLogger;
 
   private String transactionId;
   private Transaction transaction;
   private TransactionRequest transactionRequest;
+  private Event messageEvent;
+  private Event aliasEvent;
 
   @Autowired
   MatrixApiTest(MatrixApi matrixApi) {
@@ -48,11 +57,17 @@ class MatrixApiTest {
         .completed(true)
         .build();
     transactionRequest = new TransactionRequest();
-    transactionRequest.setEvents(Arrays.asList(
-        new RoomMessage<>(), new RoomAliases()
-    ));
+    messageEvent = new RoomMessage<>();
+    aliasEvent = new RoomAliases();
+    transactionRequest.setEvents(List.of(messageEvent, aliasEvent));
 
     when(transactionRepository.save(any())).thenReturn(transaction);
+    mockLogger = new MockLogger(MatrixApi.class);
+  }
+
+  @AfterEach
+  void tearDown() {
+    mockLogger.teardown();
   }
 
   @Test
@@ -92,6 +107,25 @@ class MatrixApiTest {
         .save(any());
     // no events processed
     verify(eventService, times(0)).process(any());
+  }
+
+  @Test
+  void testEventError() {
+    RuntimeException e = new RuntimeException();
+    when(transactionRepository.findDistinctByTransactionId(transactionId))
+      .thenReturn(Optional.empty());
+    doThrow(e).when(eventService).process(messageEvent);
+
+    matrixApi.transaction(transactionId, transactionRequest);
+
+    mockLogger.verify(Level.ERROR, "Error processing event: ", e);
+    verify(eventService).process(aliasEvent);
+    // saved with completed
+    verify(transactionRepository, times(1))
+        .save(eq(Transaction.builder()
+            .transactionId(transactionId)
+            .completed(true)
+            .build()));
   }
 
   @Test
